[gd_scene load_steps=4 format=3 uid="uid://chjqtnquulugm"]

[ext_resource type="Theme" uid="uid://b026culyib5dr" path="res://resources/new_theme.tres" id="1_njptv"]
[ext_resource type="Script" uid="uid://blcnvw2xu7k62" path="res://scripts/dialogue_ui.gd" id="2_6q285"]

[sub_resource type="LabelSettings" id="LabelSettings_njptv"]
font_size = 25

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_njptv")
script = ExtResource("2_6q285")

[node name="DialogueBox" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_njptv")

[node name="DialogueLine" type="RichTextLabel" parent="DialogueBox"]
unique_name_in_owner = true
layout_mode = 2
text = "This is a line of dialogue."

[node name="SpeakerBox" type="Control" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -150.0
grow_vertical = 0

[node name="Polygon2D" type="Polygon2D" parent="SpeakerBox"]
color = Color(0.16862746, 0.5686275, 0.8666667, 0.5882353)
polygon = PackedVector2Array(0, 0, 180, 0, 200, 50, 0, 50)

[node name="SpeakerName" type="Label" parent="SpeakerBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -11.5
offset_right = 23.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Name"
label_settings = SubResource("LabelSettings_njptv")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Polygon2D" type="Polygon2D" parent="Control"]
position = Vector2(-26, -26)
polygon = PackedVector2Array(0, 0, 40, 20, 0, 40)
